--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "sticker"
   ],
   "private": true,
-  "version": "1.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -30,8 +30,7 @@
     "build:firefox": "wxt build --browser firefox",
     "zip": "wxt zip --mode production",
     "zip:prod": "wxt zip --mode production",
-    "zip:firefox": "wxt zip --browser firefox",
-    "zip:firefox-prod": "wxt zip --browser firefox --mode production",
+    "zip:firefox": "wxt zip --browser firefox --mode production",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
